--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.11.0",
     "react-spinners": "^0.13.8",
+    "recharts": "^2.8.0",
     "stripe": "^13.9.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
