--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   "dependencies": {
     "@clerk/nextjs": "^4.25.1",
     "@hookform/resolvers": "^3.3.1",
-    "@prisma/client": "^5.3.1",
+    "@prisma/client": "^5.4.2",
     "@radix-ui/react-accordion": "^1.1.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-checkbox": "^1.0.4",
@@ -30,10 +30,12 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "inter": "^2.1.0",
     "lucide-react": "^0.284.0",
     "mongodb": "^6.1.0",
     "next": "13.5.4",
     "next-cloudinary": "^4.23.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-color-palette": "^7.1.0",
     "react-dom": "^18",
@@ -45,6 +47,8 @@
     "stripe": "^13.9.0",
     "tailwind-merge": "^1.14.0",
     "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.1",
+    "vitest": "^0.34.6",
     "zod": "^3.22.2",
     "zustand": "^4.4.2"
   },
